--- a/nop4/src/Plugins/Nop.Plugin.Misc.Brevo/Nop.Plugin.Misc.Brevo.csproj
+++ b/nop4/src/Plugins/Nop.Plugin.Misc.Brevo/Nop.Plugin.Misc.Brevo.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Npgsql" Version="8.0.3" />
     <PackageReference Include="sib_api_v3_sdk" Version="3.3.0" />
     <PackageReference Include="RestSharp" Version="106.12.0" />
   </ItemGroup>
