--- a/nop4/src/Plugins/Nop.Plugin.Tax.Avalara/Nop.Plugin.Tax.Avalara.csproj
+++ b/nop4/src/Plugins/Nop.Plugin.Tax.Avalara/Nop.Plugin.Tax.Avalara.csproj
@@ -101,6 +101,7 @@
 
   <ItemGroup>
     <PackageReference Include="Avalara.AvaTax" Version="23.5.0" />
+    <PackageReference Include="Npgsql" Version="8.0.3" />
   </ItemGroup>
 
   <ItemGroup>
