--- a/nop4/src/Presentation/Nop.Web.Framework/Nop.Web.Framework.csproj
+++ b/nop4/src/Presentation/Nop.Web.Framework/Nop.Web.Framework.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.405" />
+    <PackageReference Include="Npgsql" Version="8.0.3" />
     <PackageReference Include="WebMarkupMin.AspNetCore8" Version="2.16.0" />
     <PackageReference Include="WebMarkupMin.NUglify" Version="2.16.0" />
   </ItemGroup>
