--- a/nop4/src/Presentation/Nop.Web/Nop.Web.csproj
+++ b/nop4/src/Presentation/Nop.Web/Nop.Web.csproj
@@ -49,6 +49,7 @@
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
+    <PackageReference Include="Npgsql" Version="8.0.3" />
 
     <None Update="Areas\Admin\sitemap.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
