--- a/nop4/src/Tests/Nop.Tests/Nop.Tests.csproj
+++ b/nop4/src/Tests/Nop.Tests/Nop.Tests.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
     <PackageReference Include="Moq" Version="4.20.70" />
+    <PackageReference Include="Npgsql" Version="8.0.3" />
     <PackageReference Include="NUnit" Version="4.1.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0">
       <PrivateAssets>all</PrivateAssets>
